added random-chunks option, added a SI-SNR loss computing on 1s frames and then averaging, solved convtasnet memory and slowness issues by allowing benchmark, deleting an useless variable, solved slow training by allowing the gradient to flow through the original mixture

--- a/.gitignore
+++ b/.gitignore
@@ -100,3 +100,9 @@ Icon
 Network Trash Folder
 Temporary Items
 .apdisk
+
+# Personal stuff
+attached
+attached.png
+attached_hl.png
+SideCode/extractTargetWAV.py
